// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`10_untracked > should work with recorded events 1`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 2`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 3`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 4`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket3"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 5`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket3"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 6`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket3"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 7`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket3"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 8`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Buy ticket3"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox" checked=""><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 9`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox" checked=""><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 10`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox"><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox" checked=""><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;

exports[`10_untracked > should work with recorded events 11`] = `
"
    <div id="root"><ul><li><input type="checkbox" checked=""><input value="Wash dishes"><button type="button">Delete</button><button type="button">Duplicate</button></li><li><input type="checkbox" checked=""><input value="Study JS2"><button type="button">Delete</button><button type="button">Duplicate</button></li></ul></div>
    <script type="module" src="/src/main.tsx"></script>
  

"
`;
